After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 754810 - visual alert: Window title flash does not work at all, setting is ignored
visual alert: Window title flash does not work at all, setting is ignored
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Universal Access
3.17.x
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
: 754809 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2015-09-09 23:39 UTC by Christian Stadelmann
Modified: 2016-04-08 09:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
universal-access: Specify a window when testing visual bell (1.47 KB, patch)
2016-04-07 15:30 UTC, Florian Müllner
committed Details | Review

Description Christian Stadelmann 2015-09-09 23:39:56 UTC
Steps to reproduce:
0. In a gnome on wayland session...
1. open gnome-control-center, open "Universal Access", then "Visual Alerts"
2. enable visual alerts, set it to flash the window title
3. click the "test flash" button

What should happen:
Window title should flash

What actually happens:
On X: whole display flashes
On wayland: nothing happens at all (see bug https://bugzilla.gnome.org/show_bug.cgi?id=754809 )

Additional information:
This is happening on both X and Wayland.

Software versions:
Wayland (no flash at all due to bug https://bugzilla.gnome.org/show_bug.cgi?id=754809 )
gtk3-3.17.8-1.fc23.x86_64
gnome-shell-3.17.91-1.fc23.x86_64
mutter-3.17.91-1.fc23.x86_64
libwayland-server-1.8.92-1.fc23.x86_64

X (visual-bell-type is ignored as if it were set to 'fullscreen-flash'):
gtk3-3.16.6-1.fc22.x86_64
gnome-shell-3.16.3-1.fc22.x86_64
mutter-3.16.3-3.fc22.x86_64
Comment 1 Christian Stadelmann 2016-04-07 13:51:11 UTC
*** Bug 754809 has been marked as a duplicate of this bug. ***
Comment 2 Jonas Ådahl 2016-04-07 15:02:43 UTC
(In reply to Matthias Clasen from comment #3)
> Jonas, where did we end on this ?

We'll flash the whole screen as a fallback when no window is specified. I.e. gdk_display_beep() will cause a fullscreen flash because it was not a window flash, while gdk_window_beep() will flash only the window.

I noticed now, however, that when beeping via X11, if no window was specified, no matter who sent the bell event, mutter will just pick the focused window (if it happens to have a frame, i.e. x11 non-csd windows) and flash that one. On Wayland, we'll fallback to the fullscreen flash when no window is specified.

I don't think we should try to be guessing things in mutter when coming from Wayland, so if we want to guess the window that should be flashed, we should make that guess in the GDK backend, and have mutter continue falling back on fullscreen flash if no window was specified. We can probably just try to pick an arbitrary window that "is active" and it'll often be correct (until we support multi seat, then it'll be harder to guess).

How does that sound?
Comment 3 Florian Müllner 2016-04-07 15:30:41 UTC
Created attachment 325545 [details] [review]
universal-access: Specify a window when testing visual bell

When testing the window title flash, we should make sure that there
is a window to flash instead of relying on the compositor to pick
one for us.
Comment 4 Florian Müllner 2016-04-07 15:33:55 UTC
(In reply to Christian Stadelmann from comment #0)
> Steps to reproduce:
> 0. In a gnome on wayland session...
> 1. open gnome-control-center, open "Universal Access", then "Visual Alerts"
> 2. enable visual alerts, set it to flash the window title
> 3. click the "test flash" button
> 
> What should happen:
> Window title should flash

We could try harder to pick a window to flash when there's none specified, but in any case I don't think it is right for gnome-control-center to rely on an existing fallback here.
Comment 5 Bastien Nocera 2016-04-08 09:33:02 UTC
Attachment 325545 [details] pushed as 87bf4cc - universal-access: Specify a window when testing visual bell