universal-access: Specify a window when testing visual bell

When testing the window title flash, we should make sure that there
is a window to flash instead of relying on the compositor to pick
one for us.

https://bugzilla.gnome.org/show_bug.cgi?id=754810